<resources>
    <string name="app_name">StoryKu</string>
    <string name="story_image">Story Image</string>
    <string name="user_name_story">User Name Story</string>
    <string name="story_title">Story Title</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_password">Minimal 6 Characters</string>
    <string name="invalid_email">Invalid Email Format</string>
    <string name="name">Name</string>
    <string name="image_back">Image Back</string>
    <string name="description">Description</string>
    <string name="add_story">Add Story</string>
    <string name="settings">Settings</string>
    <string name="detail_story">Detail Story</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="preview_image">Preview Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="capture_camera">Capture Camera</string>
    <string name="rotate_camera">Rotate Camera</string>
    <string name="general">General</string>
    <string name="capturing">Capturing</string>
    <string name="upload_as_guest">Upload as Guest</string>
    <string name="input_picture_first">Please input picture first</string>
    <string name="not_get_permission">Not getting permission</string>
    <string name="check_input">Check your input</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Show story image in widget</string>
    <string name="appwidget_text">Story Image</string>
    <string name="empty_text">No Data</string>
    <string name="widget_image">Widget Image</string>
    <string name="error_bitmap">Error processing bitmap</string>
</resources>