<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="32dp"
        tools:context=".ui.addstory.AddStoryActivity">

        <ImageView
            android:id="@+id/img_add_story"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@drawable/bg_border"
            android:clickable="true"
            android:contentDescription="@string/preview_image"
            android:focusable="true"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_camera_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/bg_button_teal"
            android:text="@string/camera"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_gallery_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/img_add_story"
            app:layout_constraintTop_toBottomOf="@+id/img_add_story" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gallery_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button_teal"
            android:text="@string/gallery"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/img_add_story"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_camera_add"
            app:layout_constraintTop_toBottomOf="@+id/img_add_story" />

        <EditText
            android:id="@+id/edit_desc_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="top"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/img_add_story"
            app:layout_constraintStart_toStartOf="@+id/img_add_story"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button_green"
            android:text="@string/upload"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/edit_desc_add"
            app:layout_constraintStart_toStartOf="@+id/edit_desc_add"
            app:layout_constraintTop_toBottomOf="@+id/edit_desc_add" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload_guest_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button_green"
            android:text="@string/upload_as_guest"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_upload_add"
            app:layout_constraintStart_toStartOf="@+id/btn_upload_add"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload_add" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:SpinKit_Color="@color/black"
            app:SpinKit_Style="ThreeBounce"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_upload_guest_add"
            app:layout_constraintStart_toStartOf="@+id/btn_upload_guest_add"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload_guest_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>